first attempt of adding an ability to execute jmh tests using forks > 0, not tested yet